[package]
name = "backend"
version = "0.1.0"
authors = ["ScipioAfricanus1 <bdharris3@uh.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "1.1.5"
serde_json="1.0"
actix-web="3"
futures="0.3.8"
serde="1.0.117"
json = "0.12"
env_logger = "0.8.2"
tokio-test="0.4.0"
chrono="0.4"
log="0.4"